# advent-of-code

./: LICENSE
2023/: .env  Cargo.toml  README.md  day-01.bench.txt  justfile
2023/day-01/src/: part1.rs  part2.rs
2023/scripts/: Cargoish.toml  get-aoc-input.rs  get-aoc-input1.rs
2023/www/: Cargo.toml
